--- a/strings.ini
+++ b/strings.ini
@@ -1,25 +1,25 @@
 [strings]
-NEW_BODY_STYLE			= "New Body Style:"
+NEW_BODY_STYLE			= "Neuer Karosserie Stil :"
 
-SHOWROOM_MISSING		= "Missing (Expected) Features:
-SHOWROOM_UNINSTALLED		= "Uninstalled Features:"
-SHOWROOM_THOUGHTS		= "Customer Thoughts:"
-SFB_SALESCAT_TOO_LOW		= "Price range too low"
-SFB_SALESCAT_TOO_HIGH		= "Price range too high"
-SFB_WRONG_BODYSTYLE		= "Wrong bodystyle"
-SFB_OVERPRICED			= "Poor value for money"
+SHOWROOM_MISSING		= "Standard Ausstattung Fehlt:
+SHOWROOM_UNINSTALLED		= "Nicht Installierte Ausstattung:"
+SHOWROOM_THOUGHTS		= "Kundenmeinungen:"
+SFB_SALESCAT_TOO_LOW		= "Preisspanne Zu Niedrig"
+SFB_SALESCAT_TOO_HIGH		= "Preisspanne zu Hoch"
+SFB_WRONG_BODYSTYLE		= "Falscher Karosserie Stil"
+SFB_OVERPRICED			= "Schlechtes Preis/Leistung Verhaeltnis"
 SFB_MISSING_FEATURES		= "Missing vital features"
 
-OPT_PAUSE_RES_COMPLETE		= "Pause on research complete"
-RES_COMPLETE_UPGRADE_ALL	= "Upgrade All Slots"
-OPT_IMPORTERS_ALWAYS		= "Always Show Importer GUI"
+OPT_PAUSE_RES_COMPLETE		= "Forschungs Pause Vollstaendig"
+RES_COMPLETE_UPGRADE_ALL	= "Alle Slots Upgrade"
+OPT_IMPORTERS_ALWAYS		= "Importier GUI immer zeigen"
 
 FEAT_TT_CATEGORY		= "Kategorie"
 FEAT_TT_RARITY			= "Seltenheit"
 FEAT_TT_PREMIUM			= "Premium"
 FEAT_TT_VALUE			= "Wert"
 
-TECH_TREE_COMPETITION		= "Konkurrenz Gebrauch:"
+TECH_TREE_COMPETITION		= "Konkurenz:"
 SALES_CATEGORY			= "Preis Kategorie:"
 
 MESS_122_TITLE			= "Version 1.23 - Wichtige Aenderungen"
