da is mir doch noch ein string durchgerutscht ;)

--- a/strings.ini
+++ b/strings.ini
@@ -8,7 +8,7 @@ SFB_SALESCAT_TOO_LOW		= "Preisspanne Zu Niedrig"
 SFB_SALESCAT_TOO_HIGH		= "Preisspanne zu Hoch"
 SFB_WRONG_BODYSTYLE		= "Falscher Karosserie Stil"
 SFB_OVERPRICED			= "Schlechtes Preis/Leistung Verhaeltnis"
-SFB_MISSING_FEATURES		= "Missing vital features"
+SFB_MISSING_FEATURES		= "Grundlegende ausstatung fehlt!"
 
 OPT_PAUSE_RES_COMPLETE		= "Forschungs Pause Vollstaendig"
 RES_COMPLETE_UPGRADE_ALL	= "Alle Slots Upgrade"
