--- a/resources.ini
+++ b/resources.ini
@@ -1,17 +1,17 @@
 [config]
 AERIAL_GUINAME = Antenne
 AIRBAG_GUINAME = Airbag
-AIRCON_GUINAME = Klimaeinheit
+AIRCON_GUINAME = Klimaanlage
 ALARM_GUINAME = Alarm
 WHEEL_ALLOY_GUINAME = Leichtmetall Felge
 AXLE_GUINAME = Achse
-ROLLCAGE_GUINAME = Karosse
+ROLLCAGE_GUINAME = Ueberrollkäfig
 BRAKE_GUINAME = Bremse
 CAMERA_GUINAME = Kamera
 CHIP_GUINAME = Chip
 CLIMATE_CONTROL_GUINAME = Klimasteuerung
 DOOR PANEL_GUINAME = Tuerverkleidung
-DRIVE SHAFT_GUINAME = Abtriebswelle
+DRIVE SHAFT_GUINAME = Antriebswelle
 ENGINE_ASSEMBLY_GUINAME = Antrieb
 ENGINE_BLOCK_GUINAME = Motorblock
 STARTER MOTOR_GUINAME = Motorsteuerung
@@ -33,7 +33,7 @@ REAR ARCH_GUINAME = Hintere Kotfluegel
 REAR BUMPER_GUINAME = Hintere Stossstange
 ROOF_GUINAME = Dach
 RUBBER_GUINAME = Gummi
-SATNAV_GUINAME = GPS
+SATNAV_GUINAME = GPS Navigation
 SEAT_GUINAME = Sitz
 SENSOR_GUINAME = Sensor
 SERVO_GUINAME = Servo
@@ -51,7 +51,7 @@ BOOT_GUINAME = Heckklappe
 UNDERCARRIAGE_GUINAME = Fahrgestell
 VALVE_GUINAME = Ventil
 VENT_GUINAME = Lueftung
-WHEEL_GUINAME = Rad
+WHEEL_GUINAME = Felge
 WINDOW_GUINAME = Fenster
 WINDSCREEN_GUINAME = Windschutzscheibe
 WING MIRROR_GUINAME = Seitenspiegel
