--- a/resources.ini
+++ b/resources.ini
@@ -5,7 +5,7 @@ AIRCON_GUINAME = Klimaanlage
 ALARM_GUINAME = Alarm
 WHEEL_ALLOY_GUINAME = Leichtmetall Felge
 AXLE_GUINAME = Achse
-ROLLCAGE_GUINAME = Ueberrollkäfig
+ROLLCAGE_GUINAME = Ueberrollkaefig
 BRAKE_GUINAME = Bremse
 CAMERA_GUINAME = Kamera
 CHIP_GUINAME = Chip
