--- a/strings.ini
+++ b/strings.ini
@@ -1,18 +1,18 @@
 [strings]
-NEW_BODY_STYLE			= "Neuer Karosserie Stil :"
+NEW_BODY_STYLE			= "Neuer Karosseriestil:"
 
-SHOWROOM_MISSING		= "Standard Ausstattung Fehlt:
+SHOWROOM_MISSING		= "Fehlende (erwartete) Ausstattung:
 SHOWROOM_UNINSTALLED		= "Nicht Installierte Ausstattung:"
 SHOWROOM_THOUGHTS		= "Kundenmeinungen:"
-SFB_SALESCAT_TOO_LOW		= "Preisspanne Zu Niedrig"
-SFB_SALESCAT_TOO_HIGH		= "Preisspanne zu Hoch"
-SFB_WRONG_BODYSTYLE		= "Falscher Karosserie Stil"
+SFB_SALESCAT_TOO_LOW		= "Preisspanne zu niedrig"
+SFB_SALESCAT_TOO_HIGH		= "Preisspanne zu hoch"
+SFB_WRONG_BODYSTYLE		= "Falscher Karosseriestil"
 SFB_OVERPRICED			= "Schlechtes Preis/Leistung Verhaeltnis"
-SFB_MISSING_FEATURES		= "Grundlegende ausstatung fehlt!"
+SFB_MISSING_FEATURES		= "Grundlegende Ausstattung fehlt!"
 
-OPT_PAUSE_RES_COMPLETE		= "Forschungs Pause Vollstaendig"
-RES_COMPLETE_UPGRADE_ALL	= "Alle Slots Upgrade"
-OPT_IMPORTERS_ALWAYS		= "Importier GUI immer zeigen"
+OPT_PAUSE_RES_COMPLETE		= "Spielpause bei Abschluss einer Forschung"
+RES_COMPLETE_UPGRADE_ALL	= "Alle Slots upgraden"
+OPT_IMPORTERS_ALWAYS		= "Importierer GUI immer zeigen"
 
 FEAT_TT_CATEGORY		= "Kategorie"
 FEAT_TT_RARITY			= "Seltenheit"
