Fertig Übersetzt - Bitte korrekturlesen
kleinigkeiten geändert

--- a/tutorial.ini
+++ b/tutorial.ini
@@ -55,7 +55,7 @@ RESEARCH_PLACED_DESCRIPTION = Ihr erstes Forschungslabor wenn ihre Finanzen es z
 SUPPLY_STOCK_PLACED_TITLE = Versorgungslager
 SUPPLY_STOCK_PLACED_DESCRIPTION = ein Versorgungslager Hilft bei der Versorgung ihrer Stationen indemm es Betriebsmittel Zwischen lagert was verkürzte lieferzeiten zu den einzelnen Stationen bewirkt!
 LEVEL_EDITOR_TITLE = Level Editor
-LEVEL_EDITOR_DESCRIPTION = Der level editor is Noch eine einzige Grosse Baustellen aber hier koennen sie schonmal anfangen eigene Karten zu erstellen und unter neuen namen speichern!
+LEVEL_EDITOR_DESCRIPTION = Der level editor ist noch eine einzige Grosse Baustelle aber hier koennen sie schonmal anfangen eigene Karten zu erstellen und unter neuen namen speichern!
 SCHEDULER_TITLE = 
 SCHEDULER_DESCRIPTION = 
 AI_RESEARCH_TITLE = ForschungsFortschritt der Konkurenz
