--- a/features.ini
+++ b/features.ini
@@ -1,8 +1,8 @@
 [config]
 FEATURE_BASIC_CAR_GUINAME = Einfaches Auto
-FEATURE_BASIC_QA_GUINAME = Qualitätskontrolle
+FEATURE_BASIC_QA_GUINAME = Qualitaetskontrolle
 FEATURE_ANTILOCK_BRAKES_GUINAME = Antiblockiersystem (ABS)
-FEATURE_REVERSING_CAMERA_GUINAME = Rückfahrkamera
+FEATURE_REVERSING_CAMERA_GUINAME = Rueckfahrkamera
 FEATURE_TIRE_PRESSURE_SENSORS_GUINAME = Reifendruck Sensoren
 FEATURE_DRIVER_AIRBAG_GUINAME = Fahrer Airbag
 FEATURE_PASSENGER_AIRBAG_GUINAME = Beifahrer Airbag
