--- a/productiontasks.ini
+++ b/productiontasks.ini
@@ -16,7 +16,7 @@ TASK_MAKE_BONNET_GUINAME = Motorhauben Herstellung
 TASK_MAKE_ROLLCAGE_GUINAME = Karosserie Herstellung 
 TASK_MAKE_ENGINE_BLOCK_GUINAME = Motorblock Herstellung
 TASK_MAKE_ENGINE_ASSEMBLY_GUINAME = Finale Motor Montage
-TASK_MAKE_DRIVE_SHAFT_GUINAME = Antribswelle Herstellung
+TASK_MAKE_DRIVE_SHAFT_GUINAME = Antriebswelle Herstellung
 TASK_FIT_FRONTARCH_GUINAME = Voderer Kotfluegel Montage
 TASK_FIT_BOOT_GUINAME = Heckklappen Montage
 TASK_FIT_STEERING_COLUMN_GUINAME = Lenksaeulen Montage
@@ -78,24 +78,24 @@ TASK_FIT_ELECTRONICS_GUINAME = Elektronik Montage
 TASK_FIT CHASSIS_GUINAME = Fahrgestell Montage 
 CATEGORY_ADVANCED_MANUFACTURING_GUINAME = Servos und Sensoren 
 TASK_FIT_BODY_GUINAME = Karosserie Montage
-TASK_CONVEYOR_GUINAME = Foerderband
+TASK_CONVEYOR_GUINAME = Fliessband
 TASK_EXPORT_GUINAME = Export
 TASK_PAINT_GUINAME = Lackierung
 TASK_FIT_ACCESSORIES_GUINAME = Zubehoer Montage
 TASK_FIT_ENGINE_GUINAME = Motor Montage
 CATEGORY_FACILITIES_GUINAME = Anlagen
 TASK_QA_GUINAME = Qualitaetssicherung
-TASK_RESOURCE_CONVEYOR_GUINAME = Produktionsmittel Foerderband
-TASK_RESOURCE_IMPORTER_GUINAME = Produktionsmittel Importierer
-TASK_CONVEYOR_CONVERGE3_GUINAME = Foerderband Sammelpunkt 3
-TASK_CONVEYOR_T_JOIN_RIGHT_GUINAME = Foerderband T-stueck Rechts
-TASK_CONVEYOR_T_JOIN_LEFT_GUINAME = Foerderband T-stueck Links
-TASK_CONVEYOR_T_JOIN_GUINAME = Foerderband T-stueck
-TASK_CONVEYOR_T_GUINAME = Foerderband Kreuzung
-TASK_CONVEYOR_RIGHT_GUINAME = Foerderband Rechts
-TASK_CONVEYOR_LEFT_GUINAME = Foerderband Links
-TASK_CONVEYOR_CROSSOVER_GUINAME = Foerderband Uebergang
+TASK_RESOURCE_CONVEYOR_GUINAME = Bauteil Fliessband
+TASK_RESOURCE_IMPORTER_GUINAME = Bauteil Importierer
+TASK_CONVEYOR_CONVERGE3_GUINAME = Fliessband Sammelpunkt 3
+TASK_CONVEYOR_T_JOIN_RIGHT_GUINAME = Fliessband T-stueck Rechts
+TASK_CONVEYOR_T_JOIN_LEFT_GUINAME = Fliessband T-stueck Links
+TASK_CONVEYOR_T_JOIN_GUINAME = Fliessband T-stueck
+TASK_CONVEYOR_T_GUINAME = Fliessband Kreuzung
+TASK_CONVEYOR_RIGHT_GUINAME = Fliessband Rechts
+TASK_CONVEYOR_LEFT_GUINAME = Fliessband Links
+TASK_CONVEYOR_CROSSOVER_GUINAME = Fliessband Uebergang
 TASK_CONVEYOR_T_RIGHT_GUINAME = Forderband Kreutzung Rechts
-TASK_CONVEYOR_SPLIT3_GUINAME = Foerderband Teilung 3
-TASK_CONVEYOR_T_LEFT_GUINAME = Foerderband Kreuzung Links
+TASK_CONVEYOR_SPLIT3_GUINAME = Fliessband Teilung 3
+TASK_CONVEYOR_T_LEFT_GUINAME = Fliessband Kreuzung Links
 
