--- a/research.ini
+++ b/research.ini
@@ -90,24 +90,24 @@ RESEARCH_STEERING_SPECIALIZATION_DESCRIPTION
 RESEARCH_WHEELS_SPECIALIZATION_GUINAME = Felgen Spezialisierung
 RESEARCH_WHEELS_SPECIALIZATION_DESCRIPTION
 RESEARCH_MOREROBOTS1_GUINAME = Mehr Roboter
-RESEARCH_MOREROBOTS1_DESCRIPTION = Schaltet die option fuer einen extra slot an Robotern fuer jeden slot frei
+RESEARCH_MOREROBOTS1_DESCRIPTION = 
 RESEARCH_MOREROBOTS2_GUINAME = Noch mehr Roboter
-RESEARCH_MOREROBOTS2_DESCRIPTION = Schaltet die option fuer einen weiteren slot an Robotern fuer jeden slot frei
+RESEARCH_MOREROBOTS2_DESCRIPTION = 
 RESEARCH_MOREROBOTS3_GUINAME = Haufenweise Roboter 
-RESEARCH_MOREROBOTS3_DESCRIPTION = Diese Option Schaltet die option fuer die maximale anzahl an Roboter fuer jeden slot frei
+RESEARCH_MOREROBOTS3_DESCRIPTION = 
 RESEARCH_IMPROVED_EFFICIENCY_GUINAME = Verbesserte Effizienz
 RESEARCH_IMPROVED_EFFICIENCY_DESCRIPTION
 RESEARCH_IMPORT_PRIORITY_GUINAME = Import Prioritaeten
-RESEARCH_IMPORT_PRIORITY_DESCRIPTION = Schaltet das Import Menue frei
+RESEARCH_IMPORT_PRIORITY_DESCRIPTION = 
 RESEARCH_FASTER_IMPORTS_GUINAME = Schnellerer Import
 RESEARCH_FASTER_IMPORTS_DESCRIPTION = 10% schnellerer Import an Materialien 
-RESEARCH_FASTER_IMPORTS2_GUINAME = Noch Schnellere Import
+RESEARCH_FASTER_IMPORTS2_GUINAME = Noch Schnellerer Import
 RESEARCH_FASTER_IMPORTS2_DESCRIPTION = 20% schnellerer Import an Materialien
 RESEARCH_FASTER_IMPORTS3_GUINAME = Turbo Import
 RESEARCH_FASTER_IMPORTS3_DESCRIPTION = 30% schnellerer Import an Materialien
-RESEARCH_FASTER_CONVEYOR_GUINAME = Schnellere Foerderbaender 
+RESEARCH_FASTER_CONVEYOR_GUINAME = Schnellere Fliessbaender 
 RESEARCH_FASTER_CONVEYOR_DESCRIPTION = Erhoeht die Geschwindigkeit der Produktionslinien
-RESEARCH_FASTER_CONVEYOR_2_GUINAME = Noch Schnellere Foerderbaender
+RESEARCH_FASTER_CONVEYOR_2_GUINAME = Noch Schnellere Fliessbaender
 RESEARCH_FASTER_CONVEYOR_2_DESCRIPTION = Erhoeht nochmals die Geschwindigkeit der Produktionslinien
 RESEARCH_FASTER_RESOURCES_DELIVERY_GUINAME = Schneller Nachschub 
 RESEARCH_FASTER_RESOURCES_DELIVERY_DESCRIPTION = Erhoeht die Geschwindigkeit der Materiallieferungen
@@ -115,14 +115,14 @@ RESEARCH_FASTER_RESOURCES_DELIVERY_2_GUINAME = Turbo Nachschub
 RESEARCH_FASTER_RESOURCES_DELIVERY_2_DESCRIPTION = Nur fliegen ist (noch) Schneller
 RESEARCH_PREDICTIVE_STOCK_CONTROL_GUINAME = Praediktive Bestandskontrole
 RESEARCH_PREDICTIVE_STOCK_CONTROL_DESCRIPTION = Automatische Uberwachung des Bestands. Loest die Bestellung aus, nachdem sie verbraucht wurde. 
-RESEARCH_POWERPLANT_EFFICIENCY_GUINAME = Kraeftige Kraftwerke 
+RESEARCH_POWERPLANT_EFFICIENCY_GUINAME = Effizientere Kraftwerke 
 RESEARCH_POWERPLANT_EFFICIENCY_DESCRIPTION = Erhoeht die Effektivitaet des Kraftwerks
 RESEARCH_EXPANSION_GUINAME = Fabrikerweiterung
 RESEARCH_EXPANSION_DESCRIPTION = Erlaubt die erweiterung der Firma über den zukauf weiterer Hallen
 RESEARCH_ADMINISTRATION_GUINAME = Verwaltung
 RESEARCH_ADMINISTRATION_DESCRIPTION
 RESEARCH_COMPUTERISED_SALES_GUINAME = Computergestuetzte Verkaeufe
-RESEARCH_COMPUTERISED_SALES_DESCRIPTION = EDV Analage für den Verkauf
+RESEARCH_COMPUTERISED_SALES_DESCRIPTION = EDV Anlage für den Verkauf
 RESEARCH_EXPEDITED_SALES_GUINAME = Beschleunigter Verkauf
 RESEARCH_EXPEDITED_SALES_DESCRIPTION
 RESEARCH_BODY_DESIGN_GUINAME = Mehr Karosserien
