--- a/strings.ini
+++ b/strings.ini
@@ -179,7 +179,7 @@ NOTICE_MISSINGINPUT		= "Fehlender Eingang "
 OPT_AUTOSAVE			= "Autospeichern"
 
 SLOT_DELETE			= "Abreissen"
-BULLDOZER_TOOLTIP		= "Halte Shift gedrückt, um Foerderbaender abzureissen. Oder nutze die linke Maustaste (mit Shift)."
+BULLDOZER_TOOLTIP		= "Halte Shift gedrueckt, um Fliessbaender abzureissen. Oder nutze die linke Maustaste (mit Shift)."
 ALREADY_RESEARCHED		= "Bereits erforscht"
 MENU_INGAMEOPTIONS		= "Einstellungen"
 CONFIRM_MAINMENU_TITLE		= "Sind Sie sicher?"
@@ -191,7 +191,7 @@ UPDATE_NEW_VERSION		= "Neue Version:"
 UPDATE_CURRENT			= "Diese Version:"
 
 CAR_STOCK_TOGGLE		= "Verstecke Modelle, die nicht vorraetig sind."
-OPT_CONVEYOR_GUI		= "Foerderband GUI"
+OPT_CONVEYOR_GUI		= "Fliessbandband GUI"
 
 CONFIRM_YES			= "Ja"
 CONFIRM_NO			= "Nein"
@@ -221,7 +221,7 @@ EDITOR_EXPORTS			= "Export Slot Erstellen"
 LS_SAVING_FACILITIES		= "Speichere Anlagen"
 LS_SAVING_SLOTS			= "Speichere Slots"
 LS_SAVING_VEHICLES		= "Speichere Autos"
-LS_SAVING_CONVEYORS		= "Speichere Foerderbaender"
+LS_SAVING_CONVEYORS		= "Speichere Fliessbaender"
 LS_SAING_RESOURCES		= "Speichere Materialien"
 LS_SAVING_STOCKPILES		= "Speichere Laeger"
 LS_SAVING_COMPONENT_STOCKPILES	= "Speichere Komponentenlaeger"
@@ -239,7 +239,7 @@ LS_PREPARE_TO_LOAD		= "Bereite das Laden vor"
 LS_LOADING_SLOTS		= "Lade Slots"
 LS_LOADING_FACILITIES		= "Lade Anlagen"
 LS_LOADING_VEHICLES		= "Lade Autos"
-LS_LOADING_CONVEYORS		= "Lade Foerderbaender"
+LS_LOADING_CONVEYORS		= "Lade Fliessbaender"
 LS_LOADING_RESOURCES		= "Lade Materialien"
 LS_LOADING_STOCKPILES		= "Lade Laeger"
 LS_LOADING_COMPONENT_STOCKPILES	= "Lade Komponentenlaeger"
@@ -249,7 +249,7 @@ LS_LOADING_VEHICLE_DESIGNS	= "Lade Fahrzeugdesigns"
 LS_LOADING_FINANCES		= "Lade Finanzen"
 LS_LOADING_RECORDS		= "Lade Daten"
 LS_LOADING_STOCK		= "Lade Bestaende"
-LS_POST_LOAD_OPERATIONS		= "Bin noch nicht ganz fertig, keine Eile!"
+LS_POST_LOAD_OPERATIONS		= "Bin noch nicht ganz fertig, keine Hektik!"
 LS_RECALCULATING_VARIABLES	= "Berechne Variablen neu"
 LS_READING_SAVE_FILE		= "Lese Speicherstand"
 LS_INITIIALIZING_SIMULATION	= "Starte Simulation"
@@ -447,7 +447,7 @@ NOROUTE_TO_RESOURCES		= "Keine Verbindung zum lager!"
 MENU_RESEARCH			= "Forschung"
 MENU_MENU			= "Hauptmenue"
 MENU_SLOTS			= "Slots"
-MENU_CONVEYORS			= "Foerderbaender"
+MENU_CONVEYORS			= "Fliessbaender"
 MENU_SAVE			= "Speichern"
 MENU_LOAD			= "Laden"
 
