--- a/tutorial.ini
+++ b/tutorial.ini
@@ -1,12 +1,12 @@
 [config]
 INTRO_TITLE = Willkommen!
-INTRO_DESCRIPTION = Willkommen zu Ihrem ersten Tag als Fabrikmanager! Diese Pop-up-Fenster werden dazu beitragen, ihnen das Spiel zu erklären, aber sie werden nur einmal erscheinen. Es gibt eine Schaltfläche zum zurücksetzen des Tutorials in den Einstellungen sollten sie das Tutorial nochmal neustarten moechten.
+INTRO_DESCRIPTION = Willkommen zu Ihrem ersten Tag als Fabrikmanager! Diese Pop-up-Fenster werden dazu beitragen, ihnen das Spiel zu erklaeren, aber sie werden nur einmal erscheinen. Es gibt eine Schaltflaeche zum zuruecksetzen des Tutorials in den Einstellungen sollten sie das Tutorial nochmal neustarten moechten.
 INTRO2_TITLE = Ihr Job
-INTRO2_DESCRIPTION = Als Fabrik-Manager, ist es Ihre Aufgabe, die Fabrik zu entwerfen und ihre Finanzen zu verwalten, und Sie in die Gewinnzone bringen und Profit machen und die geliebten Aktionäre duerfen natuerlich auch nicht zu kurz kommen. Uebriegens wenn sie kein Geld mehr haben, gehts wieder zurück zum Arbeitsamt und das wars dann.. Also halten sie stehts ein Auge auf die Finazen oben rechts auf dem Bildschirm.
+INTRO2_DESCRIPTION = Als Fabrik-Manager, ist es Ihre Aufgabe, die Fabrik zu entwerfen und ihre Finanzen zu verwalten, und Sie in die Gewinnzone bringen und Profit machen und die geliebten Aktionaere duerfen natuerlich auch nicht zu kurz kommen. Uebriegens wenn sie kein Geld mehr haben, gehts wieder zurueck zum Arbeitsamt und das wars dann.. Also halten sie stehts ein Auge auf die Finazen oben rechts auf dem Bildschirm.
 INTRO3_TITLE = Fabrikverwaltung
-INTRO3_DESCRIPTION = Im Großen und Ganzen sind Ihre Aufgaben sich um neue Produktions Slots und Voerderbaender zu kuemmern, die Produktion(en) zu verwalten und Forschung und Preisgestaltung zu betreiben. Sie können auch alte Slots entfernen und es gibt eine vielzahl an "Neugestaltungs" Moeglichkeiten Ihrer Fabrik Layout anzupassen sowie neue Methoden der Produktion zu erforschen.
+INTRO3_DESCRIPTION = Im Grossen und Ganzen sind Ihre Aufgaben sich um neue Produktions Slots und Voerderbaender zu kuemmern, die Produktion(en) zu verwalten und Forschung und Preisgestaltung zu betreiben. Sie koennen auch alte Slots entfernen und es gibt eine vielzahl an "Neugestaltungs" Moeglichkeiten Ihrer Fabrik Layout anzupassen sowie neue Methoden der Produktion zu erforschen.
 ZOOM_TITLE = Zoom
-ZOOM_DESCRIPTION = Zuerst erklären wir Ihnen, wie Sie sich Ihre Fabrik ansehen können. Sie können die Kamera mit dem Mausrad oder den Bildauf und Bildrunter-Tasten auf Ihrer Tastatur rein und rauszoomen.
+ZOOM_DESCRIPTION = Zuerst erklaeren wir Ihnen, wie Sie sich Ihre Fabrik ansehen koennen. Sie koennen die Kamera mit dem Mausrad oder den Bildauf und Bildrunter-Tasten auf Ihrer Tastatur rein und rauszoomen.
 MOVE_TITLE = Bewegung
 MOVE_DESCRIPTION = Um sich auf der Karte zu bewegen, koennen sie entweder mit der Maus auf den Boden klicken und dann die tasten W-A-S-D druecken oder sie benutzen die Pfeiltasten oder die Maus an die Kanten des Bildschirms bewegen.
 BASICS_TITLE = Slots Plazieren
@@ -14,22 +14,22 @@ BASICS_DESCRIPTION = Um in ihrer Fabrik zu beginnen, muessen sie eine ganze Reih
 SLOT_BUTTON_TITLE = Den Passenden Slot Auaswaehlen
 SLOT_BUTTON_DESCRIPTION = Klicken sie auf diesen Button um den Slot Plazierer auszuwaehlen damit wir anfangen koennen mit der erstellung der Produktionslinie.
 SLOT_PICKER_TITLE = Slot Plazierung
-SLOT_PICKER_DESCRIPTION = Dieses Fenster zeigt alle Produktions slots und andere einrichtungen fuer ihre Firma am anfang werden sie nur wenige zur verfügbar haben da vieles erst erforscht werden muss! fahren sie mit der maus Ueber dennamen um mehr Details angezeigt zu bekommen.
+SLOT_PICKER_DESCRIPTION = Dieses Fenster zeigt alle Produktions slots und andere einrichtungen fuer ihre Firma am anfang werden sie nur wenige zur verfuegbar haben da vieles erst erforscht werden muss! fahren sie mit der maus Ueber dennamen um mehr Details angezeigt zu bekommen.
 SLOT_PICKER2_TITLE = Slot reihenfolge
 SLOT_PICKER2_DESCRIPTION = In diesem Menu sehen sie alle Stationen so wie sie platziert werden muessen angefangen beim Fahrgestell oben bis zum Export unten Nicht Vergessen jede Station mit Fliessbaendern zu verbinden!  
 SLOT_CHASSIS_TITLE = Fahrgestell
 SLOT_CHASSIS_DESCRIPTION = Die erste Station sollte die Fahrgestell Montage sein Klicken sie auf das hervorgehobene Fenster danach platzieren sie es an einem pssenden punkt in iherer Fabrik
 ON_CHASSIS_PLACE_TITLE = Weiter gehts
-ON_CHASSIS_PLACE_DESCRIPTION = Gute Arbeit! Nun geht es weiter mit der Karosserie Montage stellen sie sicher das es VOR der station mit ein wenig abstand (für spatere erweiterunghen) Platziern (Pfeile Beachten!)
+ON_CHASSIS_PLACE_DESCRIPTION = Gute Arbeit! Nun geht es weiter mit der Karosserie Montage stellen sie sicher das es VOR der station mit ein wenig abstand (fuer spatere erweiterunghen) Platziern (Pfeile Beachten!)
 ON_FIT_BODY_PLACE_TITLE = Fliesbaender
-ON_FIT_BODY_PLACE_DESCRIPTION = Nun Verbinden wir die 2 stationen mit fliessbaender waehlen sie dazu den Menupunkt Fliessbaender aus nun füllen sie angefangen von der ersten station durch klicken und ziehen die luecke zwischen beiden stationen aus!
+ON_FIT_BODY_PLACE_DESCRIPTION = Nun Verbinden wir die 2 stationen mit fliessbaender waehlen sie dazu den Menupunkt Fliessbaender aus nun fuellen sie angefangen von der ersten station durch klicken und ziehen die luecke zwischen beiden stationen aus!
 RESOURCE_IMPORTER_TITLE = Fliessband Modus Beenden
-RESOURCE_IMPORTER_DESCRIPTION = Nun Muessen sie denFliessband Modus wieder Verlassen Klicken sie dazu mit der rechten maustatse auf eine freie stelle auf in ihrer Fabrik!
-RESOURCE_IMPORTER2_TITLE = Produktionsmittel Importieren
-RESOURCE_IMPORTER2_DESCRIPTION = Nun brauchen die stationen noch eine Verbindung zum Import lager zommen sie raus und suchen sie einen Import Slot in der wand ihrer fabrik waehlen sie dann aus dem menu den Produktionsmittel Importierer und platzieren sie diesem im Import Slot!   
-RESOURCE_CONVEYOR_TITLE = Import Fliessbaender
-RESOURCE_CONVEYOR_DESCRIPTION = Nun muss natuerlich der Import slot auch mit den stationen verbunden werden waehlen sioe dazu das Import fliessband aus dem Menu aus und ziehen sie eine verbindung vom import slot zu den sattionen (Rotes Viereck = Nicht verbunden) 
-CAR_STOCK_DESCRIPTION = Dies ist eine Aufstellung ihrere Fahrzeuge die Gebaut abernoch nicht Verkauft wurden Ihr preis Variiert je nach verbauter Ausstattung ein leerer verkaufsraum deutet dadrauf hin das ihrer autos zu billig sind wobei hingegen ein voller Verkaufsraum zeigt das ihrer autos zu teuer sind!.
+RESOURCE_IMPORTER_DESCRIPTION = Nun Muessen sie den Fliessband Modus wieder verlassen Klicken sie dazu mit der rechten maustatse auf eine freie stelle auf in ihrer Fabrik!
+RESOURCE_IMPORTER2_TITLE = Bauteile Importieren
+RESOURCE_IMPORTER2_DESCRIPTION = Nun brauchen die stationen noch eine Verbindung zum Import lager zommen sie raus und suchen sie einen Import Slot in der wand ihrer fabrik waehlen sie dann aus dem menu den Bauteil Importirer und platzieren sie diesem im Import Slot!   
+RESOURCE_CONVEYOR_TITLE =  Bauteil Fliessbaender
+RESOURCE_CONVEYOR_DESCRIPTION = Nun muss natuerlich der Import slot auch mit den stationen verbunden werden waehlen sioe dazu das Bauteil fliessband aus dem Menu aus und ziehen sie eine verbindung vom import slot zu den Stationen (Rotes Viereck = Nicht verbunden) 
+CAR_STOCK_DESCRIPTION = Dies ist eine Aufstellung ihrere Fahrzeuge die Gebaut aber noch nicht Verkauft wurden Ihr Preis variiert je nach verbauter Ausstattung ein leerer verkaufsraum deutet dadrauf hin das ihrer autos zu billig sind wobei hingegen ein voller Verkaufsraum zeigt das ihrer autos zu teuer sind!.
 EFFICIENCY_TITLE = Effizienz
 EFFICIENCY_DESCRIPTION = Dies ist ein Grober ueberblick ueber die effizienz ihrer Firma. in der Theorie Sollte der flow an Autos konstant und die fliessbaender 24/7 laufen. In der Praxis ist das allerdings sehr schwierig!
 CAR_DESIGN_TITLE = Auto Modelle
@@ -53,9 +53,9 @@ POWERSTATION_DESCRIPTION = Sie Haben grade ein Kraftwerk Palziert! dieses wird p
 RESEARCH_PLACED_TITLE = Forschungslabor(e)
 RESEARCH_PLACED_DESCRIPTION = Ihr erstes Forschungslabor wenn ihre Finanzen es zulassen sollten sie nun direkt mit der Forschung beginnen
 SUPPLY_STOCK_PLACED_TITLE = Versorgungslager
-SUPPLY_STOCK_PLACED_DESCRIPTION = ein Versorgungslager Hilft bei der Versorgung ihrer Stationen indemm es Betriebsmittel Zwischen lagert was verkürzte lieferzeiten zu den einzelnen Stationen bewirkt!
+SUPPLY_STOCK_PLACED_DESCRIPTION = ein Versorgungslager Hilft bei der Versorgung ihrer Stationen indem es Bauteile zwischen lagert was verkuerzte lieferzeiten zu den einzelnen Stationen bewirkt!
 LEVEL_EDITOR_TITLE = Level Editor
-LEVEL_EDITOR_DESCRIPTION = Der level editor ist noch eine einzige Grosse Baustelle aber hier koennen sie schonmal anfangen eigene Karten zu erstellen und unter neuen namen speichern!
+LEVEL_EDITOR_DESCRIPTION = Der level editor ist noch eine einzige grosse Baustelle aber hier koennen sie schonmal anfangen eigene Karten zu erstellen und unter neuen namen speichern!
 SCHEDULER_TITLE = 
 SCHEDULER_DESCRIPTION = 
 AI_RESEARCH_TITLE = ForschungsFortschritt der Konkurenz
@@ -67,6 +67,6 @@ SLOT_DETAILS_DESCRIPTION = In diesem Fenster sehen Sie detaillierte Informatione
 BUY_VEHICLE_UPGRADE_TITLE = Auto Upgrade Gekauft!
 BUY_VEHICLE_UPGRADE_DESCRIPTION = Sie haben gerade ein Upgrade fuer eines Ihrer Slots gekauft. Dies bedeutet, dass der Slot nun faehig ist das upgrade in ein fahruzeug zu verbauen, aber das bedeutet nicht dies auch passiert ss sei denn Sie haben es auch im fenster Modell design aktiviert...
 COMPONENT_PRODUCED_TITLE = Bauteil Hergestellt!
-COMPONENT_PRODUCED_DESCRIPTION = Ihre Herstellungs Slots haben grade ihrer ersten Produktionsmittel Lokal Hergestellt diese werden nun für die Fahrzeug Produktion verwendet dies ist effizienter als diese zu importieren aber achten sie auch eine verbindung zur Verbrauchenden Prodfuktions station!
+COMPONENT_PRODUCED_DESCRIPTION = Ihre Herstellungs Slots haben grade ihrer ersten Produktionsmittel Lokal Hergestellt diese werden nun fuer die Fahrzeug Produktion verwendet dies ist effizienter als diese zu importieren aber achten sie auch eine verbindung zur Verbrauchenden Prodfuktions station!
 TECH_AI_ICONS_TITLE = Competitors Research
 TECH_AI_ICONS_DESCRIPTION = Diese icons in der Ecke jeder technologie Zeigen, dass die Konkurrenz jetzt diese Technologie in ihren fahrzeugen anbietet, der verfuegbare zusatzgewinn veringert sich dadurch!
