--- a/upgrades.ini
+++ b/upgrades.ini
@@ -41,7 +41,7 @@ POWERED_TAILGATE_GUINAME = Automatische Heckklappe
 POWERPLANT_EFFICIENCY_GUINAME = Effizientes Kraftwerk
 POWERSTEERING_GUINAME = Servolenkung
 PREDICTIVE_STOCK_CONTROL_GUINAME = Praediktive Nachschub Kontrolle
-REVERSING_CAMERA_GUINAME = Rückfahrkamera
+REVERSING_CAMERA_GUINAME = Rueckfahrkamera
 SATNAV_GUINAME = GPS Navigation
 SPARE_WHEEL_GUINAME = Reserverad
 SPOILER_GUINAME = Spoiler
