--- a/tutorial.ini
+++ b/tutorial.ini
@@ -1,34 +1,36 @@
 [config]
+MARKET_TITLE = Market
+MARKET_DESCRIPTION = This screen shows you a breakdown of the market demand for each combination of car body style and price category. Green boxes show market segments where you have cars on sale, others are markets you have not yet broken into. You cannot sell cars to everyone until you have car models that fill every combination of style and budget.
 INTRO_TITLE = Willkommen!
-INTRO_DESCRIPTION = Willkommen zu Ihrem ersten Tag als Fabrikmanager! Diese Pop-up-Fenster werden dazu beitragen, ihnen das Spiel zu erklaeren, aber sie werden nur einmal erscheinen. Es gibt eine Schaltflaeche zum zuruecksetzen des Tutorials in den Einstellungen sollten sie das Tutorial nochmal neustarten moechten.
+INTRO_DESCRIPTION = Willkommen zu Ihrem ersten Tag als Fabrikmanager! Diese Pop-up-Fenster werden dazu beitragen, Ihnen das Spiel zu erklaeren, aber sie werden nur einmal erscheinen. Es gibt eine Schaltflaeche zum zuruecksetzen des Tutorials in den Einstellungen, sollten Sie das Tutorial nochmal neustarten moechten.
 INTRO2_TITLE = Ihr Job
-INTRO2_DESCRIPTION = Als Fabrik-Manager, ist es Ihre Aufgabe, die Fabrik zu entwerfen und ihre Finanzen zu verwalten, und Sie in die Gewinnzone bringen und Profit machen und die geliebten Aktionaere duerfen natuerlich auch nicht zu kurz kommen. Uebriegens wenn sie kein Geld mehr haben, gehts wieder zurueck zum Arbeitsamt und das wars dann.. Also halten sie stehts ein Auge auf die Finazen oben rechts auf dem Bildschirm.
+INTRO2_DESCRIPTION = Als Fabrik-Manager ist es Ihre Aufgabe die Fabrik zu entwerfen und ihre Finanzen zu verwalten, sowie diese in die Gewinnzone zu bringen und Profit zu machen, damit die geliebten Aktionaere  natuerlich nicht zu kurz kommen. Uebriegens, wenn sie kein Geld mehr haben, gehts wieder zurueck zum Arbeitsamt und das wars dann... Also halten sie stehts ein Auge auf die Finazen oben rechts auf dem Bildschirm.
 INTRO3_TITLE = Fabrikverwaltung
-INTRO3_DESCRIPTION = Im Grossen und Ganzen sind Ihre Aufgaben sich um neue Produktions Slots und Voerderbaender zu kuemmern, die Produktion(en) zu verwalten und Forschung und Preisgestaltung zu betreiben. Sie koennen auch alte Slots entfernen und es gibt eine vielzahl an "Neugestaltungs" Moeglichkeiten Ihrer Fabrik Layout anzupassen sowie neue Methoden der Produktion zu erforschen.
+INTRO3_DESCRIPTION = Im Grossen und Ganzen sind Ihre Aufgaben sich um neue Produktions Slots und Foerderbaender zu kuemmern, die Produktion(en) zu verwalten und Forschung und Preisgestaltung zu betreiben. Sie koennen auch alte Slots entfernen und es gibt eine Vielzahl an "Neugestaltungs" Moeglichkeiten Ihr Fabrik Layout anzupassen, sowie neue Methoden der Produktion zu erforschen.
 ZOOM_TITLE = Zoom
-ZOOM_DESCRIPTION = Zuerst erklaeren wir Ihnen, wie Sie sich Ihre Fabrik ansehen koennen. Sie koennen die Kamera mit dem Mausrad oder den Bildauf und Bildrunter-Tasten auf Ihrer Tastatur rein und rauszoomen.
+ZOOM_DESCRIPTION = Zuerst erklaeren wir Ihnen, wie Sie sich Ihre Fabrik ansehen koennen. Sie koennen die Kamera mit dem Mausrad oder dem Bildauf und Bildrunter Tasten auf Ihrer Tastatur rein- und rauszoomen.
 MOVE_TITLE = Bewegung
-MOVE_DESCRIPTION = Um sich auf der Karte zu bewegen, koennen sie entweder mit der Maus auf den Boden klicken und dann die tasten W-A-S-D druecken oder sie benutzen die Pfeiltasten oder die Maus an die Kanten des Bildschirms bewegen.
+MOVE_DESCRIPTION = Um sich auf der Karte zu bewegen, koennen sie entweder mit der Maus auf den Boden klicken und dann die tasten W-A-S-D druecken, oder sie benutzen die Pfeiltasten, oder Sie bewegen die Maus an die Kanten des Bildschirms.
 BASICS_TITLE = Slots Plazieren
-BASICS_DESCRIPTION = Um in ihrer Fabrik zu beginnen, muessen sie eine ganze Reihe von Produktions slots in der richtigen Reihenfolge mit Foerderbaendern verbinden. Die Autos bewegen sich dann entlang der Produktionslinie, bis sie einen "Export" -Slot erreichen, der sie in den Verkaufsraum zum Verkauf bringt.
+BASICS_DESCRIPTION = Um in Ihrer Fabrik zu beginnen, muessen sie eine ganze Reihe von Produktionsslots in der richtigen Reihenfolge mit Foerderbaendern verbinden. Die Autos bewegen sich dann entlang der Produktionslinie, bis sie einen "Export"-Slot erreichen, der sie in den Verkaufsraum zum Verkauf bringt.
 SLOT_BUTTON_TITLE = Den Passenden Slot Auaswaehlen
-SLOT_BUTTON_DESCRIPTION = Klicken sie auf diesen Button um den Slot Plazierer auszuwaehlen damit wir anfangen koennen mit der erstellung der Produktionslinie.
+SLOT_BUTTON_DESCRIPTION = Klicken sie auf diesen Button, um den Slot Plazierer auszuwaehlen, damit wir mit der Erstellung der Produktionslinie anfangen koennen.
 SLOT_PICKER_TITLE = Slot Plazierung
-SLOT_PICKER_DESCRIPTION = Dieses Fenster zeigt alle Produktions slots und andere einrichtungen fuer ihre Firma am anfang werden sie nur wenige zur verfuegbar haben da vieles erst erforscht werden muss! fahren sie mit der maus Ueber dennamen um mehr Details angezeigt zu bekommen.
-SLOT_PICKER2_TITLE = Slot reihenfolge
-SLOT_PICKER2_DESCRIPTION = In diesem Menu sehen sie alle Stationen so wie sie platziert werden muessen angefangen beim Fahrgestell oben bis zum Export unten Nicht Vergessen jede Station mit Fliessbaendern zu verbinden!  
+SLOT_PICKER_DESCRIPTION = Dieses Fenster zeigt alle Produktionsslots und andere Einrichtungen fuer Ihre Firma. Am Anfang werden Sie nur wenige zur Verfuegung haben, da vieles erst erforscht werden muss! Fahren Sie mit der Maus ueber den Namen, um mehr Details zu sehen.
+SLOT_PICKER2_TITLE = Slot Reihenfolge
+SLOT_PICKER2_DESCRIPTION = In diesem Menu sehen sie alle Stationen, so wie sie platziert werden muessen - angefangen beim Fahrgestell (oben) bis zum Export (unten). Nicht Vergessen jede Station mit Foerderbaendern zu verbinden!  
 SLOT_CHASSIS_TITLE = Fahrgestell
-SLOT_CHASSIS_DESCRIPTION = Die erste Station sollte die Fahrgestell Montage sein Klicken sie auf das hervorgehobene Fenster danach platzieren sie es an einem pssenden punkt in iherer Fabrik
-ON_CHASSIS_PLACE_TITLE = Weiter gehts
-ON_CHASSIS_PLACE_DESCRIPTION = Gute Arbeit! Nun geht es weiter mit der Karosserie Montage stellen sie sicher das es VOR der station mit ein wenig abstand (fuer spatere erweiterunghen) Platziern (Pfeile Beachten!)
-ON_FIT_BODY_PLACE_TITLE = Fliesbaender
-ON_FIT_BODY_PLACE_DESCRIPTION = Nun Verbinden wir die 2 stationen mit fliessbaender waehlen sie dazu den Menupunkt Fliessbaender aus nun fuellen sie angefangen von der ersten station durch klicken und ziehen die luecke zwischen beiden stationen aus!
-RESOURCE_IMPORTER_TITLE = Fliessband Modus Beenden
-RESOURCE_IMPORTER_DESCRIPTION = Nun Muessen sie den Fliessband Modus wieder verlassen Klicken sie dazu mit der rechten maustatse auf eine freie stelle auf in ihrer Fabrik!
+SLOT_CHASSIS_DESCRIPTION = Die erste Station sollte die Fahrgestell Montage sein. Klicken Sie auf das hervorgehobene Fenster, danach platzieren Sie es an einem passenden Punkt in Ihrer Fabrik.
+ON_CHASSIS_PLACE_TITLE = Weiter Gehts!
+ON_CHASSIS_PLACE_DESCRIPTION = Gute Arbeit! Nun geht es weiter mit der Karosserie Montage. Stellen Sie sicher, dass Sie VOR der Station ein wenig Abstand einhalten, denn spaeter kommen dort Zwischenstationen hin. (Pfeile Beachten!)
+ON_FIT_BODY_PLACE_TITLE = Foerderbaender
+ON_FIT_BODY_PLACE_DESCRIPTION = Nun Verbinden wir die zwei Stationen mit Foerderbaendern. Waehlen Sie dazu den Menuepunkt "Foerderbaender" aus. Nun fuellen Sie, angefangen von der ersten Station, durch Klicken und Ziehen, die Luecke zwischen beiden Stationen aus!
+RESOURCE_IMPORTER_TITLE = Foerderband Modus Beenden
+RESOURCE_IMPORTER_DESCRIPTION = Nun muessen Sie den Foerderband Modus wieder verlassen. Klicken Sie dazu mit der rechten Maustaste auf eine freie Stelle in Ihrer Fabrik!
 RESOURCE_IMPORTER2_TITLE = Bauteile Importieren
 RESOURCE_IMPORTER2_DESCRIPTION = Nun brauchen die stationen noch eine Verbindung zum Import lager zommen sie raus und suchen sie einen Import Slot in der wand ihrer fabrik waehlen sie dann aus dem menu den Bauteil Importirer und platzieren sie diesem im Import Slot!   
 RESOURCE_CONVEYOR_TITLE =  Bauteil Fliessbaender
-RESOURCE_CONVEYOR_DESCRIPTION = Nun muss natuerlich der Import slot auch mit den stationen verbunden werden waehlen sioe dazu das Bauteil fliessband aus dem Menu aus und ziehen sie eine verbindung vom import slot zu den Stationen (Rotes Viereck = Nicht verbunden) 
+RESOURCE_CONVEYOR_DESCRIPTION = Nun muss natuerlich der Import slot auch mit den stationen verbunden werden waehlen sioe dazu das Bauteil Foerderband aus dem Menu aus und ziehen sie eine verbindung vom import slot zu den Stationen (Rotes Viereck = Nicht verbunden) 
 CAR_STOCK_DESCRIPTION = Dies ist eine Aufstellung ihrere Fahrzeuge die Gebaut aber noch nicht Verkauft wurden Ihr Preis variiert je nach verbauter Ausstattung ein leerer verkaufsraum deutet dadrauf hin das ihrer autos zu billig sind wobei hingegen ein voller Verkaufsraum zeigt das ihrer autos zu teuer sind!.
 EFFICIENCY_TITLE = Effizienz
 EFFICIENCY_DESCRIPTION = Dies ist ein Grober ueberblick ueber die effizienz ihrer Firma. in der Theorie Sollte der flow an Autos konstant und die fliessbaender 24/7 laufen. In der Praxis ist das allerdings sehr schwierig!
